tests/ui/nebula_derive_duplicate_column.stderr
error: duplicate Nebula column name `title`
 --> tests/ui/nebula_derive_duplicate_column.rs:7:5
  |
7 |     name: String,
  |     ^^^^
